# Kage

./: .aptabase-key.example  .gitattributes  .gitignore  .tauri-updater-pubkey.example  .taurignore  ACP_PROTOCOL_IMPLEMENTATION.md  ACP_STREAMING_IMPLEMENTATION.md  BACKEND_CHANGES_NEEDED.md  CLAUDE.md  CODE_BLOCK_IMPLEMENTATION.md  CONNECTION_MODES.md  CONTRIBUTING.md  Cargo.toml  Config  DROPDOWN_FIX.md  FINAL_IMPLEMENTATION_SUMMARY.md  HOTKEY_DEBUG_GUIDE.md  ICON_GENERATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MODE_MIGRATION_GUIDE.md  PATTERN_RECOGNITION.md  PIPE_COMMUNICATION.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  RUST_CHANGES_SUMMARY.md  TASK2_SUMMARY.md  TASK3_TEST_PLAN.md  TASK4_TEST.md  TASK5_VERIFICATION.md  TASK6_SUMMARY.md  TASK7_SUMMARY.md  TASK7_VERIFICATION.md  TASK8_SUMMARY.md  TASK8_VERIFICATION.md  TASK9_SUMMARY.md  TASK9_VERIFICATION.md  TESTING.md  (+20 more)
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  feedback.yml
.github/workflows/: auto-dev-release.yml  ci.yml  release.yml
.husky/: pre-push
.kiro/steering/: kage.md  product.md  prompt-engineering.md  structure.md  tech.md
capabilities/: default.json
computer_control_mcp/: Cargo.toml
computer_control_mcp/src/: handlers.rs  input_tools.rs  main.rs  tool_definitions.rs
computer_control_mcp/src/app_steering/: notepad.md
docs/: COMPUTER_CONTROL_MCP.md  COMPUTER_CONTROL_V2.md  DEBUG_MODE.md  EXTENSIONS.md  I18N.md  OS_ABSTRACTION_GUIDE.md  OS_ARCHITECTURE.md  PRIVACY.md  RELEASE.md  REVIEW_2026-07.md  SECURITY_MODEL.md  SHORTCUTS_GUIDE.md  TOOL_PERMISSIONS.md
icons/: README.md  generate-icons.py  kage.icns
kage-calendar-helper/: Cargo.toml
kage-calendar-helper/src/: main.rs
kage-core/: Cargo.toml
kage-core/src/: calendar.rs  changelog_cache.rs  lib.rs
kage-core/src/computer_control/: mod.rs
kage-core/src/folder_tools/: mod.rs  scan.rs
kage-core/src/os/: accessibility.rs  input.rs  mod.rs  process.rs
kage-core/src/os/linux/: accessibility.rs  input.rs  launcher.rs  mod.rs  process.rs
kage-core/src/os/macos/: input.rs  mod.rs  process.rs
kage-core/src/os/macos/accessibility/: actions.rs  tree.rs
kage-core/src/os/windows/: input.rs  mod.rs  process.rs
kage-core/src/os/windows/accessibility/: actions.rs  traversal.rs
locales/ar/: messages.json
locales/bn/: messages.json
locales/cs/: messages.json
locales/da/: messages.json
locales/de/: messages.json
locales/el/: messages.json
locales/en/: messages.json
locales/es/: messages.json
locales/fa/: messages.json
locales/fi/: messages.json
locales/fr/: messages.json
locales/he/: messages.json
locales/hi/: messages.json
locales/hu/: messages.json
locales/id/: messages.json
locales/it/: messages.json
locales/ja/: messages.json
locales/ko/: messages.json
locales/nl/: messages.json
locales/no/: messages.json
locales/pl/: messages.json
locales/pt/: messages.json
locales/ro/: messages.json
locales/ru/: messages.json
locales/sv/: messages.json
locales/th/: messages.json
locales/tr/: messages.json
locales/uk/: messages.json
locales/ur/: messages.json
locales/vi/: messages.json
locales/zh-CN/: messages.json
locales/zh-TW/: messages.json
mcp-servers/computer-control/: README.md  pyproject.toml
mcp-servers/computer-control/computer_control/: __init__.py  app_steering.py  server.py
mcp-servers/computer-control/computer_control/accessibility/: __init__.py  base.py  linux_atspi.py  macos_ax.py  platform.py  tree.py  windows_uia.py
mcp-servers/computer-control/computer_control/app_steering/: calculator.md
pocket_tts/: server.py
sample_extensions/sunset-theme/: dark.json  manifest.json
scripts/: acp_chat_ui.py  acp_client.py  build_dev_installer.ps1  build_dev_installer.sh  build_mcp.py  check_i18n.py  check_module_size.py  cleanup_kage_webviews.ps1  dev_server.py  echo_agent.py  ensure_vendor.py  export_svg_paths.py  gen_installer_images.py  generate_signing_keys.sh  inspect_kage_cli_db.py  inspect_kiro_cli_db.py  outlook_calendar.ps1  probe_slash.py  probe_slash_set.py  run_bundled_dev.sh  smoke_test.py  test_all.py  test_check_i18n.py  test_pocket_tts.py  translate.py
src/: acp_client.rs  activity_tracker.rs  agent_commands.rs  agent_presets.rs  app_launcher.rs  app_log.rs  auto_steering.rs  automation.rs  builtin_steering.md  chunk_batcher.rs  config.rs  config_export.rs  config_migrations.rs  context_rules.rs  crash_recovery.rs  ephemeral_session.rs  error.rs  event_targets.rs  events.rs  extensions.rs  hotkey_norm.rs  i18n.rs  lib.rs  link_metadata_cache.rs  lock_ext.rs  logger.rs  main.rs  mcp_json_rpc.rs  mcp_registration.rs  mcp_sidecar.rs  ollama.rs  panic_handler.rs  permission_audit.rs  process_manager.rs  session_titler.rs  setup.rs  single_instance.rs  startup.rs  state.rs  steering_io.rs  (+5 more)
src-tauri/macos/: Info.plist  calendar-helper.swift  entitlements.plist
src-tauri/windows/: hooks.nsh  installer.nsi
src/acp_client/: mod.rs  session.rs  transport.rs  types.rs
src/activity_tracker/: report.rs
src/agent_sessions/: claude_code.rs  kage_desktop.rs  kiro_cli.rs  kiro_desktop.rs  mod.rs
src/app_log/: state.rs  writer.rs
src/commands/: agent_sessions.rs  extensions.rs  folder_tools.rs  i18n.rs  input.rs  kage_desktop.rs  kiro_desktop.rs  messaging.rs  mod.rs  oauth.rs  pocket_tts.rs  (+4 more)
tests/: acp_client_integration_test.rs  acp_client_test.rs  app_launcher_test.rs  command_error_type_parity_test.rs  command_permissions_parity_test.rs  config_serde_default_parity_test.rs  config_test.rs  error_handling_test.rs  error_test.rs  extensions_test.rs  folder_tools_test.rs  lib.rs  mock_acp_server.rs  mock_app_test.rs  oauth_loopback_test.rs  shortcuts_test.rs  startup_test.rs  state_manage_parity_test.rs  windows-test.manifest
ui/: context-menu.html  extension-sandbox.html  floating.html  index.html  inline-assist.html  settings.html  store.html  welcome.html
ui-tests/: package-lock.json  package.json
ui-vendor/: package-lock.json  package.json  setup.js
(+539 files in other folders)
