[package]
name = "kage"
version = "0.9.0"
edition = "2021"
default-run = "kage"
authors = ["Oren Nachman (nachmano@)"]
description = "Your AI-powered desktop companion!"
license = "MIT"
repository = "TBD"
homepage = "TBD"

[package.metadata.update]
version_url = "https://example.com/kage/latest-version.txt"
installer_url = "https://example.com/kage/kage-setup.exe"
changelog_url = "https://example.com/kage/CHANGELOG.md"

[package.metadata.update.dev]
version_url = "http://localhost:1420/updates/latest-version"
installer_url = "http://localhost:1420/updates/kage-setup.exe"
changelog_url = "http://localhost:1420/updates/CHANGELOG.md"

[dependencies]
tauri = { version = "2.10", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Explicit tokio feature list rather than `full` — we don't use the
# process / signal / net / fs surface (those go through the std-blocking
# path inside spawn_blocking), and `full` pulls them in unconditionally.
# rt-multi-thread + macros + sync + time + rt cover what's actually used
# (tokio::spawn, tokio::sync::Mutex, tokio::time::sleep, async fns).
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "sync", "time"] }
uuid = { version = "1.12", features = ["v4", "serde"] }
anyhow = "1.0"
dirs = "6.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
ctrlc = "3.4"
whoami = "2.1"
base64 = "0.22"
reqwest = { version = "0.13", features = ["blocking", "json"] }
url = "2.5"
zip = { version = "8.1", default-features = false, features = ["deflate"] }
semver = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-dialog = "2"
rfd = "0.15"
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
regex = "1"
lru = "0.18"

[target.'cfg(windows)'.dependencies]
winreg = "0.56"
windows-icons = "0.3"
windows-collections = "0.3"
windows-future = "0.3"
uiautomation = { version = "0.24", features = ["process", "control", "input"] }
windows = { version = "0.62", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Com",
    "Win32_System_Power",
    "Win32_System_WinRT",
    "Management_Deployment",
    "ApplicationModel",
    "ApplicationModel_Core",
    "ApplicationModel_DataTransfer",
    "Foundation",
    "Foundation_Collections",
    "Storage",
    "Storage_Search",
    "Storage_FileProperties",
    "Storage_Streams",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.31", features = ["signal"] }
signal-hook = "0.4"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "kage"
path = "src/main.rs"
test = false

[[bin]]
name = "kage-computer-control-mcp"
path = "src/bin/computer_control_mcp.rs"
test = false
