[package]
name = "kage"
version = "0.9.0"
edition = "2021"
default-run = "kage"
authors = ["Oren Nachman (nachmano@)"]
description = "Your AI-powered desktop companion!"
license = "Apache-2.0"
repository = "https://github.com/nachmore/Kage"
homepage = "https://github.com/nachmore/Kage"

# Auto-updater endpoints. See `src/updater.rs` for the consumers.
#
# The updater is wired through `tauri-plugin-updater`, which fetches a
# `latest.json` manifest from the configured endpoint and verifies the
# downloaded installer against a signature embedded in the manifest
# using the public key provisioned at build time (see build.rs and
# docs/RELEASE.md).
#
# Three release channels, each served from a fixed GitHub Release tag
# alias that CI force-moves to the most recent build for that channel:
#   - stable  — cut from a signed v*.*.* tag
#   - beta    — staged pre-release
#   - dev     — every commit to main
# Users pick a channel in Settings → Updates; the resolver in
# src/updater.rs::endpoint_for_channel maps the string to the right URL.
#
# Debug builds hit the same endpoints. That means "is this update flow
# wired up correctly?" is a question you can answer without a release —
# `cargo tauri dev` on the dev channel reaches the same dev-latest
# release in CI that real users on the dev channel would. We used to
# point debug builds at a localhost stub, but it broke local testing
# and offered nothing in return: the build is signed (or unsigned) the
# same either way, so the network endpoint isn't the trust boundary.
#
# The {{target}}, {{arch}}, and {{current_version}} placeholders are
# substituted at request time by the plugin.
[package.metadata.update]
endpoint_stable = "https://github.com/nachmore/Kage/releases/latest/download/latest.json"
endpoint_beta   = "https://github.com/nachmore/Kage/releases/download/beta-latest/latest.json"
endpoint_dev    = "https://github.com/nachmore/Kage/releases/download/dev-latest/latest.json"
changelog_url   = "https://raw.githubusercontent.com/nachmore/Kage/main/CHANGELOG.md"

# URLs surfaced to users from the UI (welcome flow, settings, about page).
# `build.rs` forwards these into compile-time env vars so `env!()` in Rust
# and a small Tauri command in the frontend can read them without any
# runtime config lookup. Keeping them in one place means we never have
# to grep for hardcoded github.com/nachmore/Kage strings when we migrate
# to a dedicated domain or GitHub Pages site later.
[package.metadata.links]
repository = "https://github.com/nachmore/Kage"
issues     = "https://github.com/nachmore/Kage/issues"
privacy    = "https://github.com/nachmore/Kage/blob/main/docs/PRIVACY.md"

[dependencies]
tauri = { version = "2.10", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Explicit tokio feature list rather than `full` — we don't use the
# process / signal / net / fs surface (those go through the std-blocking
# path inside spawn_blocking), and `full` pulls them in unconditionally.
# rt-multi-thread + macros + sync + time + rt cover what's actually used
# (tokio::spawn, tokio::sync::Mutex, tokio::time::sleep, async fns).
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "sync", "time"] }
uuid = { version = "1.12", features = ["v4", "serde"] }
anyhow = "1.0"
dirs = "6.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
ctrlc = "3.4"
whoami = "2.1"
base64 = "0.22"
reqwest = { version = "0.13", features = ["blocking", "json"] }
url = "2.5"
zip = { version = "8.1", default-features = false, features = ["deflate"] }
semver = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-dialog = "2"
# Signed in-app updates. The plugin verifies a .sig file against a
# compile-time public key before running any installer, replacing the
# older hand-rolled updater. See src/updater.rs and docs/RELEASE.md.
tauri-plugin-updater = "2"
rfd = "0.15"
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
regex = "1"
lru = "0.18"
# Anonymous product analytics. Only transmits events if the user has opted in
# at first-run or via Settings → Privacy. See src/telemetry.rs and
# docs/PRIVACY.md for the full policy. The plugin is a no-op if the build
# is produced without an APTABASE_KEY (see build.rs → option_env!).
tauri-plugin-aptabase = "1.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.56"
windows-icons = "0.3"
windows-collections = "0.3"
windows-future = "0.3"
uiautomation = { version = "0.24", features = ["process", "control", "input"] }
windows = { version = "0.62", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_Kernel",
    "Win32_System_JobObjects",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Com",
    "Win32_System_Power",
    "Win32_System_WinRT",
    "Wdk_System_Threading",
    "Management_Deployment",
    "ApplicationModel",
    "ApplicationModel_Core",
    "ApplicationModel_DataTransfer",
    "Foundation",
    "Foundation_Collections",
    "Storage",
    "Storage_Search",
    "Storage_FileProperties",
    "Storage_Streams",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.31", features = ["signal"] }
signal-hook = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
# AppKit bindings for NSWorkspace/NSRunningApplication — foreground app info,
# app-icon extraction, running-app enumeration. Already transitively pulled in
# by Tauri so pinning to the same major versions keeps the graph unified.
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication", "NSImage", "NSBitmapImageRep"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSData", "NSDictionary"] }
# Core Foundation + Core Graphics for CGWindowListCopyWindowInfo (per-window
# title lookup). Title extraction requires the Screen Recording TCC permission
# at runtime — without it we fall back to empty title (process-level tracking
# still works).
core-foundation = "0.10"
core-graphics = { version = "0.25", features = ["highsierra"] }
# Accessibility framework bindings for the AX provider in
# `src/os/macos/accessibility.rs`. Thin FFI layer — the provider handles
# CFRetain/CFRelease and role mapping directly. Requires the Accessibility
# TCC permission at runtime.
accessibility-sys = "0.2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }
toml = "0.8"
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "kage"
path = "src/main.rs"
test = false

[[bin]]
name = "kage-computer-control-mcp"
path = "src/bin/computer_control_mcp.rs"
test = false
