[package]
name = "kage"
version = "0.9.0"
edition = "2021"
autobins = false
default-run = "kage"
authors = ["Oren Nachman (nachmano@)"]
description = "Your AI-powered desktop companion!"
license = "Apache-2.0"
repository = "https://github.com/nachmore/Kage"
homepage = "https://github.com/nachmore/Kage"

# Auto-updater endpoints. See `src/updater.rs` for the consumers.
#
# The updater is wired through `tauri-plugin-updater`, which fetches a
# `latest.json` manifest from the configured endpoint and verifies the
# downloaded installer against a signature embedded in the manifest
# using the public key provisioned at build time (see build.rs and
# docs/RELEASE.md).
#
# Three release channels, each served from a fixed GitHub Release tag
# alias that CI force-moves to the most recent build for that channel:
#   - stable  — cut from a signed v*.*.* tag
#   - beta    — staged pre-release
#   - dev     — every commit to main
# Users pick a channel in Settings → Updates; the resolver in
# src/updater.rs::endpoint_for_channel maps the string to the right URL.
#
# Debug builds hit the same endpoints. That means "is this update flow
# wired up correctly?" is a question you can answer without a release —
# `cargo tauri dev` on the dev channel reaches the same dev-latest
# release in CI that real users on the dev channel would. We used to
# point debug builds at a localhost stub, but it broke local testing
# and offered nothing in return: the build is signed (or unsigned) the
# same either way, so the network endpoint isn't the trust boundary.
#
# The {{target}}, {{arch}}, and {{current_version}} placeholders are
# substituted at request time by the plugin.
[package.metadata.update]
endpoint_stable = "https://github.com/nachmore/Kage/releases/latest/download/latest.json"
endpoint_beta   = "https://github.com/nachmore/Kage/releases/download/beta-latest/latest.json"
endpoint_dev    = "https://github.com/nachmore/Kage/releases/download/dev-latest/latest.json"
changelog_url   = "https://raw.githubusercontent.com/nachmore/Kage/main/CHANGELOG.md"

# URLs surfaced to users from the UI (welcome flow, settings, about page).
# `build.rs` forwards these into compile-time env vars so `env!()` in Rust
# and a small Tauri command in the frontend can read them without any
# runtime config lookup. Keeping them in one place means we never have
# to grep for hardcoded github.com/nachmore/Kage strings when we migrate
# to a dedicated domain or GitHub Pages site later.
[package.metadata.links]
repository = "https://github.com/nachmore/Kage"
issues     = "https://github.com/nachmore/Kage/issues"
privacy    = "https://github.com/nachmore/Kage/blob/main/docs/PRIVACY.md"

[features]
# Built separately and embedded through Tauri's `externalBin` mechanism.
# Keeping this target out of the main `--bins` build avoids Tauri treating it
# as a second application executable.
mcp-sidecar = []

[dependencies]
tauri = { version = "2.10", features = ["macos-private-api", "tray-icon", "image-png"] }
# Pulled in directly (it's already a transitive dep of `tauri`) so the
# webview-wedge detector in `webview_recovery.rs` can pattern-match on
# the concrete `tauri_runtime::Error` variants (FailedToReceiveMessage
# etc.) instead of string-matching `tauri::Error`'s Display output.
tauri-runtime = "2.10"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
# `deep-link` feature flag: tells single-instance to forward URLs from
# the second-instance argv (Windows/Linux) into the deep-link plugin's
# `on_open_url` channel, so we get a uniform handler regardless of
# whether Kage was already running. Without the feature flag, a
# `kage://install/<id>` click while Kage is already up would bounce
# off the existing instance and the URL would be lost.
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
# Custom URL-scheme handler. Registers Kage as the handler for
# `kage://` so links from the public extension store and email/IM
# share-sheets land in the running app. See src/setup.rs for the
# argv/event wiring; tauri.conf.json declares the schemes; the NSIS
# installer + macOS Info.plist register the handler with the OS.
tauri-plugin-deep-link = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Explicit tokio feature list rather than `full` — we don't use the
# process / signal / net / fs surface (those go through the std-blocking
# path inside spawn_blocking), and `full` pulls them in unconditionally.
# rt-multi-thread + macros + sync + time + rt cover what's actually used
# (tokio::spawn, tokio::sync::Mutex, tokio::time::sleep, async fns).
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "sync", "time"] }
uuid = { version = "1.12", features = ["v4", "serde"] }
anyhow = "1.0"
dirs = "6.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
ctrlc = "3.4"
whoami = "2.1"
base64 = "0.22"
reqwest = { version = "0.13", features = ["blocking", "json"] }
url = "2.5"
zip = { version = "8.1", default-features = false, features = ["deflate"] }
semver = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-dialog = "2"
# Signed in-app updates. The plugin verifies a .sig file against a
# compile-time public key before running any installer, replacing the
# older hand-rolled updater. See src/updater.rs and docs/RELEASE.md.
tauri-plugin-updater = "2"
rfd = "0.15"
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
regex = "1"
lru = "0.18"
# Anonymous product analytics. Only transmits events if the user has opted in
# at first-run or via Settings → Privacy. See src/telemetry.rs and
# docs/PRIVACY.md for the full policy. The plugin is a no-op if the build
# is produced without an APTABASE_KEY (see build.rs → option_env!).
tauri-plugin-aptabase = "1.0"
# Encryption for the optional passphrase-protected config bundle export
# (Settings → About → Backup & restore). AES-GCM provides authenticated
# encryption; Argon2id derives the key from the user's passphrase with
# costs the OWASP Password Storage Cheat Sheet considers safe in 2025.
# `rand` (already a transitive dep through everything else) is exposed
# here so we can pull RNG fills directly. See src/config_export.rs.
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.9"
# Used for verifying the SHA-256 checksum of store-installed extension
# zips against the value the catalog publishes. Both crates were already
# transitive deps; making them direct surfaces them in `cargo tree` and
# lets store_install_inner drop the heavyweight `ring` API.
sha2 = "0.10"
hex = "0.4"
# OS locale detection so the i18n module can default to the user's system
# language when `config.ui.language` is unset. Tiny, zero-deps crate that
# wraps the platform-native API on each OS (CFLocale on macOS,
# GetUserDefaultLocaleName on Windows, $LANG / $LC_* on Linux).
sys-locale = "0.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.56"
windows-icons = "0.3"
windows-collections = "0.3"
windows-future = "0.3"
uiautomation = { version = "0.24", features = ["process", "control", "input"] }
# WebView2 ProcessFailed event subscription. Tauri 2.10's
# `WebviewWindow::with_webview` hands us the raw `ICoreWebView2Controller`
# from this crate's re-exports of webview2-com-sys; we need the matching
# event-handler factory and `ProcessFailedEventArgs` types from webview2-com
# to wire `add_ProcessFailed`. See src/webview_recovery.rs::install_process_failed_listeners.
# Pinned to the same version Tauri's own dep tree resolves to so we don't
# fork the COM type identity (two copies of `ICoreWebView2` in different
# versions don't compare equal).
webview2-com = "=0.38.2"
windows = { version = "0.62", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_Kernel",
    "Win32_System_JobObjects",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Com",
    "Win32_System_Power",
    "Win32_System_WinRT",
    "Wdk_System_Threading",
    "Management_Deployment",
    "ApplicationModel",
    "ApplicationModel_Core",
    "ApplicationModel_DataTransfer",
    "Foundation",
    "Foundation_Collections",
    "Storage",
    "Storage_Search",
    "Storage_FileProperties",
    "Storage_Streams",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.31", features = ["signal"] }
signal-hook = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
# AppKit bindings for NSWorkspace/NSRunningApplication — foreground app info,
# app-icon extraction, running-app enumeration. Already transitively pulled in
# by Tauri so pinning to the same major versions keeps the graph unified.
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication", "NSImage", "NSBitmapImageRep"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSData", "NSDictionary"] }
# Core Foundation + Core Graphics for CGWindowListCopyWindowInfo (per-window
# title lookup). Title extraction requires the Screen Recording TCC permission
# at runtime — without it we fall back to empty title (process-level tracking
# still works).
core-foundation = "0.10"
core-graphics = { version = "0.25", features = ["highsierra"] }
# Accessibility framework bindings for the AX provider in
# `src/os/macos/accessibility.rs`. Thin FFI layer — the provider handles
# CFRetain/CFRelease and role mapping directly. Requires the Accessibility
# TCC permission at runtime.
accessibility-sys = "0.2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }
toml = "0.8"
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Keep binary targets explicit. The sidecar source lives outside `src/bin/`
# so Tauri does not mistake it for a second application executable.
[[bin]]
name = "kage"
path = "src/main.rs"
test = false

[[bin]]
name = "kage-computer-control-mcp"
path = "src/mcp_sidecar.rs"
test = false
required-features = ["mcp-sidecar"]
