[package]
name = "kage-computer-control-mcp"
version = "0.9.0"
edition = "2021"
publish = false

[dependencies]
dirs = "6.0"
env_logger = "0.11"
kage = { path = ".." }
log = "0.4"
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_UI_Input_KeyboardAndMouse"] }
