[package]
name = "kage-computer-control-mcp"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
dirs = "6.0"
env_logger = "0.11"
# Deliberately kage-core, NOT the full kage app crate — keeps this
# sidecar's dependency graph tiny (no Tauri/webview/i18n catalogs) so a
# clean build takes seconds, not minutes. Input synthesis, accessibility,
# launcher, and folder tools all come through kage-core's os/ abstraction.
kage-core = { path = "../kage-core" }
log = "0.4"
serde_json = "1.0"
# Native folder-picker dialog for the `pick_folder` tool (handlers.rs).
# Same version as the main crate so the dep graph stays unified.
rfd = "0.15"
