# Shared core between the `kage` app and the `kage-computer-control-mcp`
# sidecar. Deliberately tiny: no Tauri, no webview, no i18n catalogs —
# the sidecar links this instead of the full app crate so a clean sidecar
# build is seconds/megabytes instead of minutes/gigabytes, and CI stops
# compiling the app graph twice per platform.
[package]
name = "kage-core"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = "0.4"
dirs = "6.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.56"
windows-collections = "0.3"
# UIA-based accessibility tree + keyboard/mouse synthesis.
uiautomation = { version = "0.24", features = ["process", "control", "input"] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Management_Deployment",
    "ApplicationModel",
    "ApplicationModel_Core",
    "Foundation",
    "Foundation_Collections",
] }

[target.'cfg(target_os = "macos")'.dependencies]
# CGEvent-based input synthesis + AX accessibility provider.
core-graphics = { version = "0.25", features = ["highsierra"] }
core-foundation = "0.10"
accessibility-sys = "0.2"
# NSWorkspace/NSRunningApplication enumeration for the AX window
# discovery in os/macos/accessibility/tree.rs. Same versions/features as
# the app crate so the dep graph stays unified.
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray"] }
